--- a/console/public/styles.css
+++ b/console/public/styles.css
@@ -77,7 +77,7 @@ h1 {
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Небольшая тень для красоты */
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     transition: background-color 0.2s, opacity 0.2s;
 }
 
